# ADOFAI_CMO

./: ADOFAI_CMO.csproj  ADOFAI_CMO.sln  Converter.cs  Main.cs  Patch.cs  README.md
Properties/: AssemblyInfo.cs
core/: .clangd  ADOFAI_CMO_CORE.sln  ADOFAI_CMO_CORE.vcxproj  ADOFAI_CMO_CORE.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
core/include/: core.h
core/src/: converter.c  converter.cc  core.cc  image.c  main.c  resizer.c
